--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -44,7 +44,7 @@
                     <button class="tab-button green" data-tab="tab4"><span class="" data-tab="tab4">Cartes connues : </span>{{cartesLevel2|length}}</button>
                 </div>
 
-                <div id="container-tab-contents">
+                <div class="container-tab-contents">
                     <div class="tab-content" data-tab="tab1">
                         
                         {# {% block block_tab1 %} #}
@@ -162,72 +162,38 @@
         </div>
 
 
-        {# <div id="selectDeck">
-            <div class="tabsSelectDeck">
+        <div id="select-deck-zone">
+            <div class="tabs-select-deck">
                 <div class="tab-buttons">
-                    <button class="tab-button grey active" data-tab="tab1"><span class="active" data-tab="tab1">Cartes non jouées : </span>{{cartesDeckNotInPositionCartesByUtilisateur|length}}</button>
-                    <button class="tab-button red" data-tab="tab2"><span class="" data-tab="tab2">Cartes non connues : </span>{{cartesLevel0|length}}</button>
-                    <button class="tab-button blue" data-tab="tab3"><span class="" data-tab="tab3">Cartes à revoir : </span>{{cartesLevel1|length}}</button>
-                    <button class="tab-button green" data-tab="tab4"><span class="" data-tab="tab4">Cartes connues : </span>{{cartesLevel2|length}}</button>
+                    <button class="tab-button active" data-tab="tab1"><span class="active" data-tab="tab1">Decks recement joués</span></button>
+                    <button class="tab-button" data-tab="tab2"><span class="" data-tab="tab2">Decks en favoris</span></button>
+                    <button class="tab-button" data-tab="tab3"><span class="" data-tab="tab3">Mes decks</span></button>
                 </div>
 
-                <div id="container-tab-contents">
+                <div class="container-tab-contents">
                     <div class="tab-content active" data-tab="tab1">
 
-                        {% if cartesDeckNotInPositionCartesByUtilisateur|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            {% set randomCartesDeckNotInPositionCartesByUtilisateur = random(cartesDeckNotInPositionCartesByUtilisateur)%}
-                            {{ randomCartesDeckNotInPositionCartesByUtilisateur.question }}
-                        </div>
-                        {% else %}
-                            Pas de cartes dans cet onglet !
-                        {% endif %} 
+                         
 
                     </div>
                     <div class="tab-content" data-tab="tab2">
 
-                        {% if cartesLevel0|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            {% set randomCarteLevel0 = random(cartesLevel0)%}
-                            {{randomCarteLevel0.question }}
-                        </div>
-                        {% else %}
-                            Pas de cartes dans cet onglet !
-                        {% endif %} 
+                        
                     
                     </div>
                     <div class="tab-content" data-tab="tab3">
 
-                        {% if cartesLevel1|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            {% set randomCarteLevel1 = random(cartesLevel1)%}
-                            {{randomCarteLevel1.question }}
-                        </div>
+                        {% for deck in utilisateur.decks %}
+                            "{{ deck.titre }}" de la catégorie: {{ deck.categorie.nom }}  <a href="{{ path('app_play_deck', {'idUtilisateur': utilisateur.id,'idDeck': deck.id} ) }}">Jouer avec ce deck</a>   <br>
                         {% else %}
-                            Pas de cartes dans cet onglet !
-                        {% endif %} 
-
-                    </div>
-                    <div class="tab-content" data-tab="tab4">
-
-                        {% if cartesLevel2|length != 0 %}
-                        <div class="carte">
-                            <span>Question:</span>
-                            {% set randomCarteLevel2 = random(cartesLevel2)%}
-                            {{randomCarteLevel1.question }}
-                        </div>
-                        {% else %}
-                            Pas de cartes dans cet onglet !
-                        {% endif %} 
+                            No decks have been found.
+                        {% endfor %}
 
                     </div>
                 </div>
             </div>
         </div>
-    </div> #}
+    </div>
 
 
   <!-- Modal -->
