--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -18,14 +18,14 @@
     {% set cartesLevel1 = [] %}
     {% set cartesLevel2 = [] %}
 
-    {% for positionCarte in positionCartesByUtilisateur %}
+    {% for carte in cartesDeckInPositionCarte %}
 
-        {% if positionCarte.position == 0 %}
-            {% set cartesLevel0 = cartesLevel0|merge([positionCarte.carte]) %}
-        {% elseif positionCarte.position == 1 %}
-            {% set cartesLevel1 = cartesLevel1|merge([positionCarte.carte]) %}
-        {% elseif positionCarte.position == 2 %}
-            {% set cartesLevel2 = cartesLevel2|merge([positionCarte.carte]) %}
+        {% if carte.position == 0 %}
+            {% set cartesLevel0 = cartesLevel0|merge([carte]) %}
+        {% elseif carte.position == 1 %}
+            {% set cartesLevel1 = cartesLevel1|merge([carte]) %}
+        {% elseif carte.position == 2 %}
+            {% set cartesLevel2 = cartesLevel2|merge([carte]) %}
         {% endif %} 
 
     {% endfor %} 
@@ -38,7 +38,7 @@
             </button>
             <div id="tabsPlayDeck">
                 <div class="tab-buttons">
-                    <button class="tab-button grey" data-tab="tab1"><span class="active" data-tab="tab1">Cartes non jouées : </span>{{cartesDeckNotInPositionCartesByUtilisateur|length}}</button>
+                    <button class="tab-button grey" data-tab="tab1"><span class="active" data-tab="tab1">Cartes non jouées : </span>{{cartesDeckNotInPositionCarte|length}}</button>
                     <button class="tab-button red" data-tab="tab2"><span class="" data-tab="tab2">Cartes non connues : </span>{{cartesLevel0|length}}</button>
                     <button class="tab-button blue active" data-tab="tab3"><span class="" data-tab="tab3">Cartes à revoir : </span>{{cartesLevel1|length}}</button>
                     <button class="tab-button green" data-tab="tab4"><span class="" data-tab="tab4">Cartes connues : </span>{{cartesLevel2|length}}</button>
@@ -48,18 +48,18 @@
                     <div class="tab-content" data-tab="tab1">
                         
                         {# {% block block_tab1 %} #}
-                            {% if cartesDeckNotInPositionCartesByUtilisateur|length != 0 %}
+                            {% if cartesDeckNotInPositionCarte|length != 0 %}
                             <div class="card-container">
                                 <div class="card">
-                                    {% set randomCartesDeckNotInPositionCartesByUtilisateur = random_without_duplicates(cartesDeckNotInPositionCartesByUtilisateur, "sessionTab1")%}
+                                    {% set randomCartesDeckNotInPositionCarte = random_without_duplicates(cartesDeckNotInPositionCarte, "sessionTab1")%}
 
                                     <div class="question">
                                         <div class="header-card"><span>Question:</span></div>
-                                        <div class="body-card"><p>{{ randomCartesDeckNotInPositionCartesByUtilisateur.question }}</p></div>
+                                        <div class="body-card"><p>{{ randomCartesDeckNotInPositionCarte.question }}</p></div>
                                     </div>
                                     <div class="response">
                                         <div class="header-card"><span>Reponse:</span></div>
-                                        <div class="body-card"><p>{{ randomCartesDeckNotInPositionCartesByUtilisateur.reponse }}</p></div>
+                                        <div class="body-card"><p>{{ randomCartesDeckNotInPositionCarte.reponse }}</p></div>
                                     </div>
                                 </div>
                             </div>
