--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,11 +10,11 @@ body {
 }
 
 header {
-  background-color: #ccc;
+  background-color: #cacaca;
 }
 
 h1 {
-    color: red;
+    color: rgb(0, 0, 0);
 }
 
 h2 {
@@ -26,20 +26,34 @@ h2 {
   text-align: center;
 }
 
+#header-contenair{
+  display: flex;
+  gap: 100px;
+}
 
+#logo{
+  height: 100px;
+  width: 180px;
+  margin: 15px;
+  border-radius: 20px;
+}
 
 #container{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   gap: 50px;
+  margin: 50px 0;
 }
 
 #playDeckZone{
-  background-color: #94949486;
+  background-color: #d3d3d386;
   backdrop-filter: blur(7px);
   width: 800px;
   text-align: center;
   padding: 20px;
+  margin: 0 20px;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -286,7 +300,7 @@ h2 {
 
   
 
-  @media screen and (max-width: 750px){
+  @media screen and (max-width: 800px){
     
     
     #playDeckZone .tab-button>span {
