--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ h2 {
   margin: 50px 0;
 }
 
-#playDeckZone{
+#play-deck-zone{
   background-color: #d3d3d386;
   backdrop-filter: blur(7px);
   width: 800px;
@@ -58,20 +58,20 @@ h2 {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-#tabsPlayDeck {
+#tabs-play-deck {
     display: flex;
     flex-direction: column;
     margin: 0px;
     padding: 20px;
   }
   
-  #playDeckZone .tab-buttons {
+  #play-deck-zone .tab-buttons {
     display: flex;
     flex-direction: row;
     /* border-bottom: 1px solid #ccc; */
   }
   
-  #playDeckZone .tab-button {
+  #play-deck-zone .tab-button {
     /* background-color: #ccc; */
     border: none;
     color: #333;
@@ -82,47 +82,47 @@ h2 {
     /* transition: background-color 0.3s ease-in-out; */
   }
 
-  #playDeckZone .tab-button.grey {
+  #play-deck-zone .tab-button.grey {
     background-color: rgb(177, 177, 177);
   }
-  #playDeckZone .tab-button.red {
+  #play-deck-zone .tab-button.red {
     background-color: rgb(255, 98, 98);
   }
-  #playDeckZone .tab-button.blue {
+  #play-deck-zone .tab-button.blue {
     background-color: rgb(52, 191, 255);
   }
-  #playDeckZone .tab-button.green {
+  #play-deck-zone .tab-button.green {
     background-color: rgb(86, 192, 44);
   }
   
-  #playDeckZone .tab-button.active {
+  #play-deck-zone .tab-button.active {
     /* background-color: #fff; */
     border: 1px solid #ccc;
     border-bottom: none;
   }
   
-  #playDeckZone .container-tab-contents {
+  #play-deck-zone .container-tab-contents {
     padding: 10px;
     border-radius: 0 25px 25px 25px;
     transition: background-color 0.5s ease-in-out;
   }
   
-  #playDeckZone .tab-content {
+  #play-deck-zone .tab-content {
     display: none;
     padding: 0px;
     /* transition: background-color 3s ease-in-out; */
   }
   
-  #playDeckZone .tab-content.active {
+  #play-deck-zone .tab-content.active {
     display: block;
     /* transition: background-color 3s ease-in-out; */
   }
 
-  #playDeckZone .tab-button>span {
+  #play-deck-zone .tab-button>span {
     display: inline;
   }
   
-  #playDeckZone .tab-button>span.active {
+  #play-deck-zone .tab-button>span.active {
     display: inline;
   }
 
@@ -303,7 +303,7 @@ h2 {
   @media screen and (max-width: 800px){
     
     
-    #playDeckZone .tab-button>span {
+    #play-deck-zone .tab-button>span {
       display: none;
     }
 
