--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -38,12 +38,13 @@
     {% endfor %} 
 
     <div id="container">
-        <div id="playDeckZone">
+        <div id="play-deck-zone">
             <h1>{{ deck.titre }}</h1>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 Imprimmer le deck
-            </button>
-            <div id="tabsPlayDeck">
+            </button><a href="{{ path('ajouter_favori', {'id': deck.id}) }}">Ajouter aux favoris</a>
+            <button id="add-favori-btn" data-recette-id="{{ deck.id }}">Ajouter aux favoris AJAX</button>
+            <div id="tabs-play-deck">
                 <div class="tab-buttons">
                     <button class="tab-button grey" data-tab="tab1"><span class="active" data-tab="tab1">Cartes non jouées : </span>{{cartesDeckNotInPositionCarte|length}}</button>
                     <button class="tab-button red" data-tab="tab2"><span class="" data-tab="tab2">Cartes non connues : </span>{{cartesLevel0|length}}</button>
@@ -160,10 +161,10 @@
                 </div>
             </div>
 
-            <button type="button" onclick="flip()" class="btn btn-primary" id="buttonResponse">
+            <button type="button" onclick="flip()" class="btn btn-primary" id="btn-response">
                 Montrer la réponse
             </button>
-            <button type="button" class="btn btn-primary" id="bouton-shuffle">
+            <button type="button" class="btn btn-primary" id="btn-shuffle">
                 autre question
             </button>
         </div>
