--- a/public/css/style.css
+++ b/public/css/style.css
@@ -307,6 +307,28 @@ h2 {
   }
   
 
+  .inline{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .fa-print.big{
+    font-size:x-large;
+  }
+
+  .add-favori{
+    cursor: pointer;
+  }
+
+  .add-favori.big{
+    font-size:xx-large;
+  }
+
+  .add-favori.red{
+    color: firebrick;
+  }
 
   
 
