--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,12 +337,13 @@ h2 {
     height: 20px;
     border: 1px solid #000000 ;
     border-radius: 5px;
+    margin-top: 20px;
   }
 
   .progress-deck{
     display: flex;
     /* width: 300px; */
-    height: 30px;
+    height: 5px;
     border: 2px solid #000000 ;
   }
 
