--- a/templates/play_deck/index.html.twig
+++ b/templates/play_deck/index.html.twig
@@ -65,6 +65,12 @@
 
                 {# <button id="add-favori-btn" data-deck-id="{{ deck.id }}">Ajouter aux favoris AJAX</button> #}
             </div>
+            <div>
+                par <a href="{{ path('show_utilisateur', {'id': utilisateur.id}) }}">{{deck.utilisateur.pseudo}}</a> | description :{{deck.description}}
+            </div>
+            <div>
+                <a href="#">Noté moi</a>
+            </div>
             <div id="tabs-play-deck">
                 <div class="tab-buttons">
                     <button class="tab-button grey" data-tab="tab1"><span class="active" data-tab="tab1">Cartes non jouées : </span><span class="nbr-carte">{{cartesDeckNotInPositionCarte|length}}</span></button>
@@ -253,7 +259,62 @@
 
                         <div id="list-favorites">
                             {% for favori in utilisateur.favoris %}
+
+
+                            <div>
                                 "{{ favori.deck.titre }}" de la catégorie: {{ favori.deck.categorie.nom }}  <a href="{{ path('app_play_deck', {'idUtilisateur': utilisateur.id,'idDeck': favori.deck.id} ) }}">Mémoriser ce deck</a>   <br>
+                            </div>
+
+                            <div>
+
+                                <div>
+                                    <div>
+                                        <div>cateforie : {{ favori.deck.categorie.nom }}</div>
+                                        <div>{{ favori.deck.titre }}</div>
+                                        <div>par : <a href="{{ path('show_utilisateur', {'id': favori.deck.utilisateur.id }) }}">{{ favori.deck.utilisateur.pseudo }}</a></div>
+                                    </div>
+                                    <div>
+                                        {% set isFavori = false %}
+                {% if app.user %}
+                    {% for favorib in app.user.favoris %}
+                        {% if favori.deck == favorib.deck %}
+                            {% set isFavori = true %}
+                        {% endif %}
+                    {% endfor %}
+                    
+                    {% if isFavori %}
+                        <i  id="foo1" data-deck-id="{{ favori.deck.id }}" data-is-favori="1" class="add-favori red big fa-solid fa-heart"></i>
+                    {% else %}
+                        <i id="foo1" data-deck-id="{{ favori.deck.id }}" data-is-favori="0" class="add-favori big fa-solid fa-heart-circle-plus"></i>   
+                    {% endif %}     
+                    </button>
+                {% endif %}
+                                    </div>
+                                </div>
+                                <div>
+                                    <div>description : {{ favori.deck.description }}</div>
+                                    <div>progression :  
+
+                                        <div class="progress-deck">
+
+
+                                            {% for carte in favori.deck.cartes %}
+
+                                            {{carte.question}}
+
+                                            {% endfor %}
+
+
+
+                                            <div class="no-level" nbr=""></div><div class="level-0" nbr=""></div><div class="level-1" nbr=""></div><div class="level-2" nbr=""></div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+
+
                             {% else %}
                                 No decks have been found.
                             {% endfor %}
